test/bad/obj_unknown_field.lat
int main() {
	return 0;
}

class c {
	int a;
	void f() {
		b = 1;
	}
}
